Output value only after enter is pressed

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <p>{{ userInput }}</p>
     <hr />
     <!-- 3) Repeat 2) but only output the entered value if the ENTER key was pressed -->
-    <input type="text" />
-    <p>OUTPUT</p>
+    <input type="text" v-on:keydown="saveInput" v-on:keyup.enter="confirmInput" />
+    <p>{{ confirmedInput }}</p>
   </section>
 </body>
 
